# vlm-clt-training

./: .gitignore  ACTIVATIONS.md  COMMIT_CHANGES.py  EXECUTE_COMMIT_AND_TRAIN.sh  LICENSE  README.md  READY_TO_RUN.md  RUN_NOW.sh  RUN_NOW_FIXED.sh  RUN_NOW_JSON.sh  RUN_SIMPLE_TEST.sh  RUN_TEST_TRAINING.sh  SETUP_COMPLETE.md  START_TRAINING.sh  SURGERY_COMPLETE.md  TRAIN_FINAL.sh  TRAIN_FULL_CLT.sh  TRAIN_NO_WANDB.sh  TRAIN_WORKING.sh  activations_amber  commit_and_train.py  config.yaml  do_commit_and_train.py  pyproject.toml  run_training.sh
docs/: CLT_ARCHITECTURE_ANALYSIS.md  PHASE_GUIDE.md
scripts/: capture_activations.py  train_clt.py  train_llava_clt.py  train_llava_clt.sh  train_single_layer.sh  upload_activations_to_hf.py
sparsify/: __init__.py  __main__.py  config.py  data.py  fused_encoder.py  kernels.py  muon.py  nanogpt.py  runner.py  sparse_coder.py  trainer.py  utils.py  vlm_data.py  vlm_hooks.py  xformers.py
